# PyMusicLooper

./: .git-blame-ignore-revs  .gitignore  CHANGELOG.md  CLI_README.md  Cargo.toml  LICENSE  README.md  looper.py  pymusiclooper.spec  pyproject.toml  requirements.txt  server.py  setup.cfg  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pyinstaller.yml  python-publish.yml
pymusiclooper/: __init__.py  __main__.py  __version__.py  _version.py  analysis.py  argparser.py  audio.py  cli.py  console.py  core.py  exceptions.py  handler.py  looper.py  playback.py  utils.py  youtube.py
python/pymusiclooper/: __main__.py  analysis.py  cli.py  console.py  core.py  exceptions.py  handler.py  youtube.py
src/: lib.rs
