[project]
name = "pymusiclooper"
version = "3.4.1.dev2"
description = "Repeat music endlessly and create seamless music loops, with play/export/tagging support."
authors = [{ name = "arkrow", email = "arkrow@protonmail.com" }]
readme = "README.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Rust",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
dependencies = [
  "librosa==0.10.2",
  "numpy>=1.25.0,<2.0.0",
  "soundfile>=0.12.1",
  "sounddevice>=0.4.6",
  "rich-click>=1.8.0,<2.0.0",
  "rich>=13.4.2",
  "pytaglib>=3.0.0,<4.0.0",
  "numba>=0.59.1",
  "yt-dlp>=2024.7.2",
  "click-params>=0.5.0,<0.6.0",
  "click-option-group>=0.5.6,<0.6.0",
  "lazy-loader>=0.3",
]
requires-python = ">=3.9,<4.0"

[project.urls]
Repository = "https://github.com/arkrow/PyMusicLooper"
Documentation = "https://github.com/arkrow/PyMusicLooper/blob/master/CLI_README.md"
Issues = "https://github.com/arkrow/PyMusicLooper/issues"
Changelog = "https://github.com/arkrow/PyMusicLooper/blob/master/CHANGELOG.md"

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.rye]
managed = true
dev-dependencies = ["maturin>=1.7,<2.0"]

[tool]
[tool.maturin]
python-source = "python"
module-name = "pymusiclooper.rust_analysis"
features = ["pyo3/extension-module"]

[tool.ruff]
ignore = ["E501", "E402"]

[project.scripts]
pymusiclooper = 'pymusiclooper.__main__:cli'
