[metadata]
name = pymusiclooper
version = attr: pymusiclooper.__version__
url = https://github.com/arkrow/PyMusicLooper
author = arkrow
author_email = arkrow@protonmail.com
description = Automatically find the loop points of any music file and export into intro/loop/outro sections or loop points, with optional playback through the terminal.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Sound/Audio :: Analysis

[options]
python_requires = >=3.6
packages = find:
install_requires =
    numpy>=1.18.2
    librosa>=0.7.2
    tqdm>=4.45.0
    soundfile>=0.10.3.post1

[options.entry_points]
console_scripts =
    pymusiclooper=pymusiclooper.__main__:cli_main